<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->
    <header
        android:title="@string/pref_header_basic"
        />

    <header
        android:title="@string/pref_header_favorites"/>

    <header
        android:fragment="atreides.house.arxiv_r.SettingsActivity$NotificationPreferenceFragment"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="atreides.house.arxiv_r.SettingsActivity$DataSyncPreferenceFragment"
        android:title="@string/pref_header_data_sync" />

    <header
        android:title="@string/pref_header_widget"/>

    <header android:title="@string/pref_header_advanced" />

    <header
        android:title="@string/pref_header_card_layout"/>

    <header
        android:title="@string/pref_header_accessibility"/>
</preference-headers>
