<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:background="@android:color/background_light" android:id="@+id/settingsLayout">



    <TextView
        android:id="@+id/settingsGroupOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/quadPadding"
        android:paddingLeft="@dimen/quadPadding"
        android:paddingBottom="@dimen/standardPadding"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="@dimen/settingsTextSize"
        android:text="@string/settingsGroupOne"/>
    <Button
        android:id="@+id/settingsFavoritesBtn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:padding="@dimen/quadPadding"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:text="Favorites"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:padding="@dimen/standardPadding"
        android:background="@color/lightGray"/>
    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:padding="@dimen/quadPadding"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:text="Notifications"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:padding="@dimen/standardPadding"
        android:background="@color/lightGray"/>
    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:padding="@dimen/quadPadding"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:text="History"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:padding="@dimen/standardPadding"
        android:background="@color/lightGray"/>
    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:padding="@dimen/quadPadding"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:text="Widget"/>
    <TextView
        android:id="@+id/settingsGroupTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/quadPadding"
        android:paddingLeft="@dimen/quadPadding"
        android:paddingBottom="@dimen/standardPadding"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="@dimen/settingsTextSize"
        android:text="@string/settingsGroupTwo"/>
    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:padding="@dimen/quadPadding"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:text="Card Layout"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:padding="@dimen/standardPadding"
        android:background="@color/lightGray"/>
    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:padding="@dimen/quadPadding"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:text="Accessibility"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:padding="@dimen/standardPadding"
        android:background="@color/lightGray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:padding="@dimen/quadPadding"
        android:textAlignment="viewStart"
        android:text="@string/version"/>

</LinearLayout>